[1.0.0]
- initial code

[1.1.0]
- Added HTML5 support.