@@ -3,3 +3,4 @@
 
 [1.1.0]
 - Added HTML5 support.
+- Added ShapeDrawerDrawable to allow shape drawing in Scene2D UI's.
